<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>21</version>
  </parent>

  <groupId>io.quarkiverse.qhorus</groupId>
  <artifactId>quarkus-qhorus-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Quarkus Qhorus - Parent</name>
  <description>Quarkus Native agent communication mesh — peer-to-peer channels, typed messages, shared data, presence</description>
  <url>https://github.com/mdproctor/quarkus-qhorus</url>

  <modules>
    <module>runtime</module>
    <module>deployment</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:mdproctor/quarkus-qhorus.git</connection>
    <developerConnection>scm:git:git@github.com:mdproctor/quarkus-qhorus.git</developerConnection>
    <url>https://github.com/mdproctor/quarkus-qhorus</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <quarkus.version>3.32.2</quarkus.version>
    <quarkus-mcp-server.version>1.11.1</quarkus-mcp-server.version>
    <compiler-plugin.version>3.13.0</compiler-plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire-plugin.version>3.2.5</surefire-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <skipITs>false</skipITs>
        <quarkus.native.enabled>true</quarkus.native.enabled>
      </properties>
    </profile>
  </profiles>

</project>
